--- a/README.Rmd
+++ b/README.Rmd
@@ -11,3 +11,7 @@ Here is some text that constitutes my first commit in my first repo.
 # My second commit
 
 Here is more text that will be added in my second commit.
+
+# My third commit
+
+Here is final text that will be added in my third commit.
