--- a/README.Rmd
+++ b/README.Rmd
@@ -11,6 +11,9 @@ Here is some text that constitutes my first commit in my first repo.
 text for another commit.
 text for yet another commit.
 
+__Here is some text on the test branch.__
+
+
 # My second commit
 
 Here is more text that will be added in my second commit.
